--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 code {
